section 10